assets/css/style.css
/*
    font-family: 'Open Sans', sans-serif;
*/

body
{
    margin: 0px;
    font-family: 'Open Sans', sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

*
{
    margin: 0px;
    box-sizing: border-box;
}

a
{
    color: #36c9dd;
    text-decoration: none;
    -webkit-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
}

a:hover
{
    color: rgb(164, 93, 255);
    -webkit-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
}

img
{
    max-width: 100%;
    height: auto;
}

header
{
    background: url(../images/header-bg.svg) top center no-repeat;
    padding: 34px 0 0 0;
    min-height: 538px;
    background-position-y: -80px;
}

header.short
{
    background: url(../images/header-bg.svg) top center no-repeat;
    padding: 34px 0 0 0;
    min-height: 304px;
    background-position-y: -334px;
}

body.short
{
    margin-top: 80px;
    padding-top: 40px;
}

.community-page header
{
    background: url(../images/community-header.svg) top center no-repeat;
}

nav ul
{
    display: block;
    text-align: center;
    margin: 0px;
    padding: 0px;
}

nav ul li
{
    font-size: 16px;
    font-weight: 400;
    display: inline-block;
    padding: 0px 18px;
    margin: 0px;
}

nav ul li img
{
    height: 22px;
    vertical-align: text-bottom;
}

nav ul li a
{
    text-decoration: none;
    color: #FFF;
}

nav ul li.active a
{
    font-weight: 700;
}

#nav-fixed nav ul
{
    display: flex;
    justify-content: center;
    align-items: center;
}

.branding
{
    text-align: center;
    padding: 50px 0 0 0;
}

.branding.home
{
    text-align: center;
    padding: 80px 0 0 0;
}

.branding h4
{
    padding: 0px 0px 25px 0px;
    text-align: center;
    color: #ffffff;
}

.branding-short
{
    text-align: left;
    padding: 1em 0 0 1em;
}

.branding-short div h1
{
    display: inline-block;
    padding-left: 0.5em;
    font-size: 40px;
}

.branding-short h4
{
    text-align: left;
    font-size: 26px;
    color: #ffffff;
    padding: 0px 0px 25px 0px;
}

.branding-short img
{
    height: 30px;
}

.documentation-page .branding, .community-page .branding
{
    padding-top: 50px;
}

h2:first-child {
    padding-top: 0;
}

.logo img
{
    max-width: 244px;
}

h2
{
    font-size: 42px;
    color: rgb(116, 0, 255);
    font-weight: 600;
    line-height: 1.2;
    text-align: center;
    padding: 30px 0px 10px 0px;
}

h3 {
	font-size: 36px;
	line-height: 42px;
	font-weight: 500;
	color: #a785e7;
	text-align: left;
	display: block;
	padding: 30px 0px 10px 0px;
}

h4
{
    font-size: 30px;
    line-height: 36px;
    font-weight: 400;
    color: #a785e7;
    text-align: left;
    padding: 20px 0px 10px 0px;
}

h5, .h5
{
    font-size: 24px;
    font-weight: 300;
    line-height: 42px;
    color: #666666;
    padding: 10px 0px 30px 0px;
    text-align: center;
}

section.left-gray
{
    background: url(../images/bottom-gray-strip.svg) bottom center no-repeat;
    background-size: auto 169px;
    padding-bottom: 168px;
}

section.right-gray
{
    background: url(../images/top-gray-strip.svg) bottom center no-repeat;
    background-size: auto 169px;
    padding-bottom: 168px;
}

section.end-gray
{
    background: #f8f8f8;
    padding-bottom: 84px;
}

div.container-gray
{
    background: #f8f8f8;
}

div.container-purple
{
    background: #9943ff;
}

section.left-purple
{
    background: url(../images/bottom-purple-strip.svg) bottom center no-repeat;
    background-size: auto 169px;
    padding-bottom: 168px;
}

.left-purple h2, .left-purple h4, .left-purple h5
{
    color: #FFF;
}

.left-purple li, .left-purple p
{
    color: #d3d3d3;
}

div.tags ul {
    list-style-type: none;
    display: inline-flex;
}

div.tags ul li {
    background: #eee;
    padding: 5px;
    margin-right: 5px;
}

p, ul, ol
{
    font-size: 18px;
    font-weight: 400;
    line-height: 30px;
    color: #888888;
}

p
{
    padding-bottom: 30px;
}

blockquote p {
    text-align: center;
    font-size: 14px;
}

blockquote img {
    text-align: center;
}

a.blue-btn, .primary-btn
{
    background: #36c9dd;
    color: #FFF;
    display: inline-block;
    font-weight: 600;
    font-size: 18px;
    line-height: 22px;
    padding: 14px 20px;
    border-radius: 100px;
    -webkit-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
}

.purple
{
    background: #d216d2;
}

.orange
{
    background: #ffb500;
}

.blue
{
    background: #338aff;
}

.orange-font
{
    color:  #ffb500;
}

.blue-font
{
    color:  #36c9dd;
}

.dark-purple-font
{
    color:  #7400ff;
}

.white-font
{
    color: #ffffff;
}

a.blue-btn:hover, .primary-btn:hover
{
    background: #a785e7;
    -webkit-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
    color: #fff;

}

.fixed-content
{
    display: table;
    width: 100%;
    max-width: 1280px;
    padding: 0 40px;
    margin: 0 auto;
}

.text-left
{
    text-align: left;
}

.text-center
{
    text-align: center;
}

.text-right
{
    text-align: right;
}

.pad-top-0 {
    padding-top: 0;
}

.pad-top-30 {
    padding-top: 30px;
}

.pad-top-40 {
    padding-top: 40px;
}

.pad-btm-0 {
    padding-bottom: 0;
}

.pad-btm-30 {
    padding-bottom: 30px;
}

.pad-btm-40 {
    padding-bottom: 40px;
}

section.about-rapids h2
{
    padding: 0px 0px 35px 0px;
}

section.about-rapids p,
section.community-main p
{
    font-size: 24px;
    line-height: 42px;
    color: #666666;
    text-align: center;
    font-weight: 300;
    padding: 0px 110px;
}

section.about-rapids p a
{
    color: #36c9dd;
}

section.about-rapids p a:hover
{
    color: rgb(116, 0, 255);
}
/* ... */

